--- a/src/exp/plotting.ipynb
+++ b/src/exp/plotting.ipynb
@@ -25,9 +25,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-11-16 10:53:50.180573: W external/org_tensorflow/tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/modules/software/binutils/2.36.1-GCCcore-10.3.0/lib:/home/modules/software/zlib/1.2.11-GCCcore-10.3.0/lib:/home/modules/software/GCCcore/10.3.0/lib64:/home/modules/software/GCCcore/10.3.0/lib\n",
-      "2021-11-16 10:53:50.474533: W external/org_tensorflow/tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/modules/software/binutils/2.36.1-GCCcore-10.3.0/lib:/home/modules/software/zlib/1.2.11-GCCcore-10.3.0/lib:/home/modules/software/GCCcore/10.3.0/lib64:/home/modules/software/GCCcore/10.3.0/lib\n",
-      "2021-11-16 10:53:50.486810: W external/org_tensorflow/tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/modules/software/binutils/2.36.1-GCCcore-10.3.0/lib:/home/modules/software/zlib/1.2.11-GCCcore-10.3.0/lib:/home/modules/software/GCCcore/10.3.0/lib64:/home/modules/software/GCCcore/10.3.0/lib\n"
+      "2021-11-18 13:26:51.410713: W external/org_tensorflow/tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/modules/software/binutils/2.36.1-GCCcore-10.3.0/lib:/home/modules/software/zlib/1.2.11-GCCcore-10.3.0/lib:/home/modules/software/GCCcore/10.3.0/lib64:/home/modules/software/GCCcore/10.3.0/lib\n",
+      "2021-11-18 13:26:53.712271: W external/org_tensorflow/tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/modules/software/binutils/2.36.1-GCCcore-10.3.0/lib:/home/modules/software/zlib/1.2.11-GCCcore-10.3.0/lib:/home/modules/software/GCCcore/10.3.0/lib64:/home/modules/software/GCCcore/10.3.0/lib\n",
+      "2021-11-18 13:26:53.785621: W external/org_tensorflow/tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/modules/software/binutils/2.36.1-GCCcore-10.3.0/lib:/home/modules/software/zlib/1.2.11-GCCcore-10.3.0/lib:/home/modules/software/GCCcore/10.3.0/lib64:/home/modules/software/GCCcore/10.3.0/lib\n"
      ]
     },
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,24 +76,127 @@
     "            'lr', 'damping', 'norm_constraint', 'correlation_length', 'scalar_inputs', 'einsum']\n",
     "filters.extend(['real_cut', 'reciprocal_cut', 'kappa'])\n",
     "filters.extend(['e_mean_mean', 'acceptance'])\n",
-    "filters.extend(['pbc', 'scale_cell', 'spin_polarized', 'r_atoms', 'z_atoms', 'simulation_cell', 'e_mean', 'e_std'])"
+    "filters.extend(['pbc', 'scale_cell', 'spin_polarized', 'r_atoms', 'z_atoms', 'simulation_cell', 'e_mean', 'e_std'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max it: 100000\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "\n",
+       "\n",
+       "\n",
+       "\n",
+       "\n",
+       "  <div class=\"bk-root\" id=\"47184ab0-e188-4340-8390-29e82ef3ac38\" data-root-id=\"3199\"></div>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": "(function(root) {\n  function embed_document(root) {\n    \n  const docs_json = {\"03884b61-83f7-4fab-83fe-87ed7d882e70\":{\"defs\":[],\"roots\":{\"references\":[{\"attributes\":{\"below\":[{\"id\":\"3210\"}],\"center\":[{\"id\":\"3213\"},{\"id\":\"3217\"}],\"height\":400,\"left\":[{\"id\":\"3214\"}],\"renderers\":[{\"id\":\"3236\"},{\"id\":\"3242\"}],\"title\":{\"id\":\"3200\"},\"toolbar\":{\"id\":\"3225\"},\"width\":400,\"x_range\":{\"id\":\"3202\"},\"x_scale\":{\"id\":\"3206\"},\"y_range\":{\"id\":\"3204\"},\"y_scale\":{\"id\":\"3208\"}},\"id\":\"3199\",\"subtype\":\"Figure\",\"type\":\"Plot\"},{\"attributes\":{},\"id\":\"3398\",\"type\":\"Selection\"},{\"attributes\":{},\"id\":\"3397\",\"type\":\"UnionRenderers\"},{\"attributes\":{\"line_alpha\":{\"value\":0.2},\"line_color\":{\"value\":\"#1b9e77\"},\"xs\":{\"field\":\"xs\"},\"ys\":{\"field\":\"ys\"}},\"id\":\"3241\",\"type\":\"MultiLine\"},{\"attributes\":{},\"id\":\"3391\",\"type\":\"AllLabels\"},{\"attributes\":{\"data\":{\"x\":{\"__ndarray__\":\"AAAAAAAA4D8AAAAAAADwPwAAAAAAAABAAAAAAAAAFEAAAAAAAAAkQAAAAAAAADRAAAAAAAAASUA=\",\"dtype\":\"float64\",\"order\":\"little\",\"shape\":[7]},\"y\":{\"__ndarray__\":\"amVmQClsHj++p8Q7sMKcveUNXb1teei812IrvA==\",\"dtype\":\"float32\",\"order\":\"little\",\"shape\":[7]}},\"selected\":{\"id\":\"3396\"},\"selection_policy\":{\"id\":\"3395\"}},\"id\":\"3232\",\"type\":\"ColumnDataSource\"},{\"attributes\":{},\"id\":\"3395\",\"type\":\"UnionRenderers\"},{\"attributes\":{\"line_color\":{\"value\":\"#1b9e77\"},\"xs\":{\"field\":\"xs\"},\"ys\":{\"field\":\"ys\"}},\"id\":\"3239\",\"type\":\"MultiLine\"},{\"attributes\":{},\"id\":\"3394\",\"type\":\"AllLabels\"},{\"attributes\":{\"source\":{\"id\":\"3232\"}},\"id\":\"3237\",\"type\":\"CDSView\"},{\"attributes\":{},\"id\":\"3208\",\"type\":\"LinearScale\"},{\"attributes\":{\"fill_alpha\":{\"value\":0.2},\"fill_color\":{\"value\":\"#1b9e77\"},\"hatch_alpha\":{\"value\":0.2},\"hatch_color\":{\"value\":\"#1b9e77\"},\"line_alpha\":{\"value\":0.2},\"line_color\":{\"value\":\"#1b9e77\"},\"size\":{\"value\":10},\"x\":{\"field\":\"x\"},\"y\":{\"field\":\"y\"}},\"id\":\"3235\",\"type\":\"Circle\"},{\"attributes\":{},\"id\":\"3202\",\"type\":\"DataRange1d\"},{\"attributes\":{\"line_alpha\":{\"value\":0.1},\"line_color\":{\"value\":\"#1b9e77\"},\"xs\":{\"field\":\"xs\"},\"ys\":{\"field\":\"ys\"}},\"id\":\"3240\",\"type\":\"MultiLine\"},{\"attributes\":{},\"id\":\"3215\",\"type\":\"BasicTicker\"},{\"attributes\":{\"fill_alpha\":{\"value\":0.1},\"fill_color\":{\"value\":\"#1b9e77\"},\"hatch_alpha\":{\"value\":0.1},\"hatch_color\":{\"value\":\"#1b9e77\"},\"line_alpha\":{\"value\":0.1},\"line_color\":{\"value\":\"#1b9e77\"},\"size\":{\"value\":10},\"x\":{\"field\":\"x\"},\"y\":{\"field\":\"y\"}},\"id\":\"3234\",\"type\":\"Circle\"},{\"attributes\":{},\"id\":\"3390\",\"type\":\"BasicTickFormatter\"},{\"attributes\":{\"bottom_units\":\"screen\",\"coordinates\":null,\"fill_alpha\":0.5,\"fill_color\":\"lightgrey\",\"group\":null,\"left_units\":\"screen\",\"level\":\"overlay\",\"line_alpha\":1.0,\"line_color\":\"black\",\"line_dash\":[4,4],\"line_width\":2,\"right_units\":\"screen\",\"syncable\":false,\"top_units\":\"screen\"},\"id\":\"3224\",\"type\":\"BoxAnnotation\"},{\"attributes\":{},\"id\":\"3204\",\"type\":\"DataRange1d\"},{\"attributes\":{\"data\":{\"xs\":[[0.5,0.5],[1.0,1.0],[2.0,2.0],[5.0,5.0],[10.0,10.0],[20.0,20.0],[50.0,50.0]],\"ys\":[[3.599849578222952,3.6000300680783175],[0.6187931922138001,0.6188825938045714],[0.005985592666045219,0.006017290812953919],[-0.07654813845609088,-0.07653828541781049],[-0.05397013748717244,-0.053966520478010815],[-0.02838167071375302,-0.02837475493517467],[-0.010462607092422554,-0.010458546855288436]]},\"selected\":{\"id\":\"3398\"},\"selection_policy\":{\"id\":\"3397\"}},\"id\":\"3238\",\"type\":\"ColumnDataSource\"},{\"attributes\":{},\"id\":\"3396\",\"type\":\"Selection\"},{\"attributes\":{\"fill_color\":{\"value\":\"#1b9e77\"},\"hatch_color\":{\"value\":\"#1b9e77\"},\"line_color\":{\"value\":\"#1b9e77\"},\"size\":{\"value\":10},\"x\":{\"field\":\"x\"},\"y\":{\"field\":\"y\"}},\"id\":\"3233\",\"type\":\"Circle\"},{\"attributes\":{},\"id\":\"3222\",\"type\":\"ResetTool\"},{\"attributes\":{\"coordinates\":null,\"formatter\":{\"id\":\"3393\"},\"group\":null,\"major_label_policy\":{\"id\":\"3394\"},\"ticker\":{\"id\":\"3211\"}},\"id\":\"3210\",\"type\":\"LinearAxis\"},{\"attributes\":{},\"id\":\"3219\",\"type\":\"WheelZoomTool\"},{\"attributes\":{\"tools\":[{\"id\":\"3218\"},{\"id\":\"3219\"},{\"id\":\"3220\"},{\"id\":\"3221\"},{\"id\":\"3222\"},{\"id\":\"3223\"}]},\"id\":\"3225\",\"type\":\"Toolbar\"},{\"attributes\":{\"coordinates\":null,\"data_source\":{\"id\":\"3238\"},\"glyph\":{\"id\":\"3239\"},\"group\":null,\"hover_glyph\":null,\"muted_glyph\":{\"id\":\"3241\"},\"nonselection_glyph\":{\"id\":\"3240\"},\"view\":{\"id\":\"3243\"}},\"id\":\"3242\",\"type\":\"GlyphRenderer\"},{\"attributes\":{\"coordinates\":null,\"data_source\":{\"id\":\"3232\"},\"glyph\":{\"id\":\"3233\"},\"group\":null,\"hover_glyph\":null,\"muted_glyph\":{\"id\":\"3235\"},\"nonselection_glyph\":{\"id\":\"3234\"},\"view\":{\"id\":\"3237\"}},\"id\":\"3236\",\"type\":\"GlyphRenderer\"},{\"attributes\":{\"source\":{\"id\":\"3238\"}},\"id\":\"3243\",\"type\":\"CDSView\"},{\"attributes\":{\"coordinates\":null,\"group\":null,\"text\":\"el7 para dp sweep\"},\"id\":\"3200\",\"type\":\"Title\"},{\"attributes\":{},\"id\":\"3211\",\"type\":\"BasicTicker\"},{\"attributes\":{},\"id\":\"3223\",\"type\":\"HelpTool\"},{\"attributes\":{},\"id\":\"3206\",\"type\":\"LinearScale\"},{\"attributes\":{\"coordinates\":null,\"formatter\":{\"id\":\"3390\"},\"group\":null,\"major_label_policy\":{\"id\":\"3391\"},\"ticker\":{\"id\":\"3215\"}},\"id\":\"3214\",\"type\":\"LinearAxis\"},{\"attributes\":{\"axis\":{\"id\":\"3214\"},\"coordinates\":null,\"dimension\":1,\"group\":null,\"ticker\":null},\"id\":\"3217\",\"type\":\"Grid\"},{\"attributes\":{},\"id\":\"3218\",\"type\":\"PanTool\"},{\"attributes\":{\"axis\":{\"id\":\"3210\"},\"coordinates\":null,\"group\":null,\"ticker\":null},\"id\":\"3213\",\"type\":\"Grid\"},{\"attributes\":{},\"id\":\"3221\",\"type\":\"SaveTool\"},{\"attributes\":{\"overlay\":{\"id\":\"3224\"}},\"id\":\"3220\",\"type\":\"BoxZoomTool\"},{\"attributes\":{},\"id\":\"3393\",\"type\":\"BasicTickFormatter\"}],\"root_ids\":[\"3199\"]},\"title\":\"Bokeh Application\",\"version\":\"2.4.1\"}};\n  const render_items = [{\"docid\":\"03884b61-83f7-4fab-83fe-87ed7d882e70\",\"root_ids\":[\"3199\"],\"roots\":{\"3199\":\"47184ab0-e188-4340-8390-29e82ef3ac38\"}}];\n  root.Bokeh.embed.embed_items_notebook(docs_json, render_items);\n\n  }\n  if (root.Bokeh !== undefined) {\n    embed_document(root);\n  } else {\n    let attempts = 0;\n    const timer = setInterval(function(root) {\n      if (root.Bokeh !== undefined) {\n        clearInterval(timer);\n        embed_document(root);\n      } else {\n        attempts++;\n        if (attempts > 100) {\n          clearInterval(timer);\n          console.log(\"Bokeh: ERROR: Unable to run BokehJS code because BokehJS library is missing\");\n        }\n      }\n    }, 10, root)\n  }\n})(window);",
+      "application/vnd.bokehjs_exec.v0+json": ""
+     },
+     "metadata": {
+      "application/vnd.bokehjs_exec.v0+json": {
+       "id": "3199"
+      }
+     },
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "</style>\n",
+       "<table id=\"T_d7788_\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th class=\"col_heading level0 col0\" >density_parameter</th>\n",
+       "      <th class=\"col_heading level0 col1\" >equilibrated_energy_mean</th>\n",
+       "      <th class=\"col_heading level0 col2\" >equilibrated_energy_sem</th>\n",
+       "      <th class=\"col_heading level0 col3\" >energy (Ry)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td id=\"T_d7788_row0_col0\" class=\"data row0 col0\" >0.500000</td>\n",
+       "      <td id=\"T_d7788_row0_col1\" class=\"data row0 col1\" >3.599940</td>\n",
+       "      <td id=\"T_d7788_row0_col2\" class=\"data row0 col2\" >0.000090</td>\n",
+       "      <td id=\"T_d7788_row0_col3\" class=\"data row0 col3\" >7.199880</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_d7788_row1_col0\" class=\"data row1 col0\" >1.000000</td>\n",
+       "      <td id=\"T_d7788_row1_col1\" class=\"data row1 col1\" >0.618838</td>\n",
+       "      <td id=\"T_d7788_row1_col2\" class=\"data row1 col2\" >0.000045</td>\n",
+       "      <td id=\"T_d7788_row1_col3\" class=\"data row1 col3\" >1.237676</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_d7788_row2_col0\" class=\"data row2 col0\" >2.000000</td>\n",
+       "      <td id=\"T_d7788_row2_col1\" class=\"data row2 col1\" >0.006001</td>\n",
+       "      <td id=\"T_d7788_row2_col2\" class=\"data row2 col2\" >0.000016</td>\n",
+       "      <td id=\"T_d7788_row2_col3\" class=\"data row2 col3\" >0.012003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_d7788_row3_col0\" class=\"data row3 col0\" >5.000000</td>\n",
+       "      <td id=\"T_d7788_row3_col1\" class=\"data row3 col1\" >-0.076543</td>\n",
+       "      <td id=\"T_d7788_row3_col2\" class=\"data row3 col2\" >0.000005</td>\n",
+       "      <td id=\"T_d7788_row3_col3\" class=\"data row3 col3\" >-0.153086</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_d7788_row4_col0\" class=\"data row4 col0\" >10.000000</td>\n",
+       "      <td id=\"T_d7788_row4_col1\" class=\"data row4 col1\" >-0.053968</td>\n",
+       "      <td id=\"T_d7788_row4_col2\" class=\"data row4 col2\" >0.000002</td>\n",
+       "      <td id=\"T_d7788_row4_col3\" class=\"data row4 col3\" >-0.107937</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_d7788_row5_col0\" class=\"data row5 col0\" >20.000000</td>\n",
+       "      <td id=\"T_d7788_row5_col1\" class=\"data row5 col1\" >-0.028378</td>\n",
+       "      <td id=\"T_d7788_row5_col2\" class=\"data row5 col2\" >0.000003</td>\n",
+       "      <td id=\"T_d7788_row5_col3\" class=\"data row5 col3\" >-0.056756</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td id=\"T_d7788_row6_col0\" class=\"data row6 col0\" >50.000000</td>\n",
+       "      <td id=\"T_d7788_row6_col1\" class=\"data row6 col1\" >-0.010461</td>\n",
+       "      <td id=\"T_d7788_row6_col2\" class=\"data row6 col2\" >0.000002</td>\n",
+       "      <td id=\"T_d7788_row6_col3\" class=\"data row6 col3\" >-0.020921</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x7e974249dc50>"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "data = get_data('/home/energy/amawi/projects/nn_ansatz/src/experiments/HEG/1611/el7_silu_dp_sweep/kfac_1lr-3_1d-3_1nc-4_m2048_el7_s128_p32_l3_det1', dicts=[])\n",
+    "data = get_data('/home/energy/amawi/projects/nn_ansatz/src/experiments/HEG/1611/el7para1_highrs/', dicts=[])\n",
     "\n",
     "plot_scatter(data['density_parameter'], \n",
-    "             data['equilibrated_energy_mean_i10000'], \n",
-    "             yerrs=data['equilibrated_energy_sem_i10000'],\n",
-    "             title='density parameter sweep') \n",
+    "             data['equilibrated_energy_mean'], \n",
+    "             yerrs=data['equilibrated_energy_sem'],\n",
+    "             title='el7 para dp sweep') \n",
     "\n",
-    "data['energy (Ry)'] = data['equilibrated_energy_mean_i10000'] * 2.\n",
-    "data[['density_parameter', 'equilibrated_energy_mean_i10000', 'equilibrated_energy_sem_i10000', 'energy (Ry)']].sort_values(by='density_parameter').style.hide_index()"
+    "data['energy (Ry)'] = data['equilibrated_energy_mean'] * 2.\n",
+    "data[['density_parameter', 'equilibrated_energy_mean', 'equilibrated_energy_sem', 'energy (Ry)']].sort_values(by='density_parameter').style.hide_index()"
    ]
   },
   {
